update to phenol 2.0